# Plant2Skeleton

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  configue.json  configure.json
.devcontainer/: devcontainer.json
.github/workflows/: macos-build.yml  test-build.yml  ubuntu-build.yml  windows-build.yml
Archive/Pure_Laplacian/: CMakeLists.txt  Skeleton_pure.cpp  Skeleton_pure.h  Tools_pure.cpp  Tools_pure.h  main_pure.cpp
Archive/Refined_Laplacian/: CMakeLists.txt  Skeleton_refined.h  Tools_refined.cpp  Tools_refined.h  main_refined.cpp
Archive/Refined_Laplacian_0/: CMakeLists.txt  Skeleton_refined.cpp  main_refined.cpp
Archive/maybe_useful/DV/: DynamicVoxelFilter.cpp
Archive/maybe_useful/L1Skeleton/: L1MedialSkeleton.cpp  L1MedialSkeleton.h
Archive/maybe_useful/Laplacian/: Skeleton_decompress.cpp  hybrid_skeleton.cpp  l1_meidal.cpp  laplacian.cpp
Archive/maybe_useful/SBF/: SurfaceBoundaryFilter.cpp  SurfaceBoundaryFilter.h
Archive/maybe_useful/Tools/: Tools.cpp  Tools.h
Docker/: Dockerfile  docker-compose.yml
GeometryCentral/: Graph.cpp  Graph.h  Skeleton.cpp  Skeleton.h  Tools.cpp  Tools.h  main.cpp
SkelSeg/: Graph.cpp  Graph.h  LOP.cpp  LOP.h  Skeleton.cpp  Skeleton.h  Tools.cpp  Tools.h  main.cpp  main_dataset_1.cpp
SkelSeg/include/: graph.h  lop.h  skeleton.h  tools.h
SkelSeg/include/utility/: config_validator.h  evaluator.h  logger.h  timer.h
SkelSeg/scripts/: evaluate.py  instance.py  semantic.py
SkelSeg/src/: graph.cpp  lop.cpp  main.cpp  skeleton.cpp  tools.cpp
SkelSeg/utility/: Random.cpp  Random.h
SkelSeg/utility/config_validator/: config_validator.h
SkelSeg/utility/evaluator/: evaluator.h  run.sh
SkelSeg/utility/evaluator/py/: evaluate.py  instance.py  semantic.py
SkelSeg/utility/logger/: logger.h
SkelSeg/utility/timer/: timer.h
app/viewer/: CMakeLists.txt  default_configure.json  main.cpp
application/viewer/: main.cpp
data/Skeleton/C20-2/: C20-2_Downsampled.ply
data/Skeleton/C20-2/LastBaseline/: C20-2_cpts_1.ply  C20-2_cpts_10.ply  C20-2_cpts_12.ply  C20-2_cpts_2.ply  C20-2_cpts_3.ply  C20-2_cpts_4.ply  C20-2_cpts_5.ply  C20-2_cpts_6.ply  C20-2_cpts_7.ply  C20-2_cpts_8.ply  C20-2_cpts_9.ply
data/Skeleton/C20-4/: C20-4_Downsampled.ply
data/Skeleton/Ca11-2/: Ca11-2_Downsampled.ply
data/Skeleton/Ca46-1/: Ca46-1_Downsampled.ply
data/Skeleton/Ca46-5/: Ca46-5_Downsampled.ply
eval/: evaluate.py  instance.py
eval/segmentation/: calculate_metrics.py  instance.py  main.py  semantic.py
eval/skeleton/: evaluator.h
evaluation/: evaluate.py  instance.py  semantic.py
evaluation/skeleton/: CMakeLists.txt  main.cpp
maybe_useful/: deprecated.cpp
maybe_useful/NonePointer/: skeleton.cpp  skeleton.h
other-skeletonlization/Slicing/: slice.py
resources/: default_configure.json
screenshot/auto_snipping_easy3d/: CMakeLists.txt  main.cpp  snipping.h
skeletonlization-py/L1_Median/: L1M.py
skeletonlization-py/Laplacian_Contraction/: LBC_my.py
skeletonlization-py/Laplacian_Contraction/third_library/pc-skeletor-main/pc_skeletor/: download.py  laplacian.py
skeletonlization-py/Slicing/: normalized_data_1.txt  slice.py  sliced_data_1.txt
src/: CMakeLists.txt  Graph.cpp  Graph.h  LOP.cpp  LOP.h  Skeleton.cpp  Skeleton.h  Tools.cpp  Tools.h  main.cpp  main_dataset.cpp
test/: KDTreeErrorTest.cpp
test/viewer/: CMakeLists.txt  main.cpp
tools/screenshot/: CMakeLists.txt  main.cpp  snipping.h
viz/: misclassified.py
viz/auto_snipping_easy3d/: CMakeLists.txt  main.cpp  snipping.h
